--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Radeon 2020</title>
+  <title>Radeon Countdown</title>
   <style>
     body {
       background-color: red;
@@ -16,24 +16,22 @@
       height: 100vh;
       margin: 0;
     }
+    h1 {
+      font-size: 3em;
+      margin-bottom: 40px;
+    }
     #countdown {
       font-size: 5em;
-    }
-    audio {
-      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+  <h1>Radeon Countdown</h1>
   <div id="countdown">Loading...</div>
-  <audio id="gribblyTrack" controls autoplay loop>
-    <source src="550e8400-e29b-41d4-a716-446655440000.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
 
   <script>
     // Target: Sept 22, 2025 at 4:00 PM CDT (UTC-5)
-    const targetUTC = Date.UTC(2025, 8, 22, 21, 0, 0); // Month is 0-indexed (8 = September), 21:00 UTC = 4PM CDT
+    const targetUTC = Date.UTC(2025, 8, 22, 21, 0, 0); // Month is 0-indexed (8 = September)
 
     function updateCountdown() {
       const now = new Date().getTime();
